--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>J Louisse Fajarillo - Portfolio</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="design.css">
 </head>
 <body>
-    <h1>J LOUISSE FAJARILLO</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quidem placeat, veniam odio suscipit, mollitia, unde repudiandae neque cumque nostrum pariatur culpa. Temporibus non odio facilis voluptatum saepe molestiae iusto?</p>
+	<div id="container">
+		<?php include('header.php');?>
+		<?php include('nav.php');?>
+		<div id='content'>
+			<h2>J LOUISSE FAJARILLO</h2>
+			<img src="profile.png" width="400" height="400">
+			</div>
+	</div>
+	<?php include('footer.php');?>
 </body>
+
 </html>
