--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="design.css">
 </head>
 <body>
-	<h1 id="header">JLOUISSE</h1>
-	<ul>
-		<li id="nav"><a class="pages" href="#home">Home</a></li>
-		<li id="nav"><a class="pages" href="#news">News</a></li>
-		<li id="nav"><a class="pages" href="#contact">Contact</a></li>
-		<li id="nav"><a class="pages" href="#about">About</a></li>
+	<div class="navbar">
+		<h1 id="header">JLOUISSE</h1>
+		<ul>
+			<li id="nav"><a class="pages" href="#home">Home</a></li>
+			<li id="nav"><a class="pages" href="#news">News</a></li>
+			<li id="nav"><a class="pages" href="#contact">Contact</a></li>
+			<li id="nav"><a class="pages" href="#about">About</a></li>
 		</ul>
-		
+	</div>
+	
 	<div id='content'>
 		<h2>J LOUISSE FAJARILLO</h2>
 		<img src="profile.png" width="400" height="400">
