--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<div class="navbar">
 		<h1 id="header">JLOUISSE</h1>
 		<ul>
-			<li><a class="pages" href="#home">Home</a></li>
-			<li><a class="pages" href="#news">News</a></li>
-			<li><a class="pages" href="#contact">Contact</a></li>
-			<li><a class="pages" href="#about">About</a></li>
+			<li><a class="pages" href="#home">About Me</a></li>
+			<li><a class="pages" href="#news">Education & Skills</a></li>
+			<li><a class="pages" href="#contact">Projects</a></li>
+			<li><a class="pages" href="#about">Contact</a></li>
 		</ul>
 	</div>
 	
