--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 	<div class="navbar">
-		<h1 id="header">JLOUISSE</h1>
+		<h1 id="header">J LOUISSE</h1>
 		<ul>
-			<li><a class="pages" href="#home">About Me</a></li>
-			<li><a class="pages" href="#news">Education & Skills</a></li>
-			<li><a class="pages" href="#contact">Projects</a></li>
-			<li><a class="pages" href="#about">Contact</a></li>
+			<li><a class="pages" href="#About-Me">About Me</a></li>
+			<li><a class="pages" href="#Education&Skills">Education & Skills</a></li>
+			<li><a class="pages" href="#Projects">Projects</a></li>
+			<li><a class="pages" href="#Contact">Contact</a></li>
 		</ul>
 	</div>
 	
 	<div id='content'>
 		<h2>J LOUISSE FAJARILLO</h2>
-		<img src="profile.png" width="400" height="400">
+		<img src="profile.png" width="350" height="350">
 		</div>
 </body>
 </html>
