--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		</ul>
 	</div>
 	
-	<div id='content'>
+	<div class="content">
 		<h2>J LOUISSE FAJARILLO</h2>
 		<img src="profile.png" width="350" height="350">
-		</div>
+	</div>
 </body>
 </html>
