--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<h1 id="header">J LOUISSE</h1>
 		<ul>
 			<li><a class="pages" href="#About-Me">About Me</a></li>
-			<li><a class="pages" href="#Education&Skills">Education & Skills</a></li>
+			<li><a class="pages" href="#Education-&-Skills">Education & Skills</a></li>
 			<li><a class="pages" href="#Projects">Projects</a></li>
 			<li><a class="pages" href="#Contact">Contact</a></li>
 		</ul>
 	</div>
 	
-	<div class="content">
+	<div id="content">
 		<h2>J LOUISSE FAJARILLO</h2>
 		<img src="profile.png" width="350" height="350">
 	</div>
