--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<div class="navbar">
 		<h1 id="header">J LOUISSE</h1>
 		<ul>
-			<li><a class="pages" href="#About-Me">About Me</a></li>
-			<li><a class="pages" href="#Education-&-Skills">Education & Skills</a></li>
-			<li><a class="pages" href="#Projects">Projects</a></li>
-			<li><a class="pages" href="#Contact">Contact</a></li>
+			<li><a href="#About-Me">About Me</a></li>
+			<li><a href="#Education-&-Skills">Education & Skills</a></li>
+			<li><a href="#Projects">Projects</a></li>
+			<li><a href="#Contact">Contact</a></li>
 		</ul>
 	</div>
 	
