--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<div class="navbar">
 		<h1 id="header">J LOUISSE</h1>
 		<ul>
-			<li><a href="#About-Me">About Me</a></li>
+			<li><a class="active" href="#About-Me">About Me</a></li>
 			<li><a href="#Education-&-Skills">Education & Skills</a></li>
 			<li><a href="#Projects">Projects</a></li>
 			<li><a href="#Contact">Contact</a></li>
-		</ul>
+			</ul>
 	</div>
 	
 	<div id="content">
