--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
 	<title>J Louisse Fajarillo - Portfolio</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="design.css">
 </head>
 <body>
 	<div class="navbar">
-		<h1 id="header">J LOUISSE</h1>
+		<div id="header">J LOUISSE</div>
 		<ul>
-			<li><a class="active" href="#About-Me">About Me</a></li>
+			<li><a href="#About-Me">About Me</a></li>
 			<li><a href="#Education-&-Skills">Education & Skills</a></li>
 			<li><a href="#Projects">Projects</a></li>
 			<li><a href="#Contact">Contact</a></li>
-			</ul>
+		</ul>
 	</div>
 	
 	<div id="content">
 		<h2>J LOUISSE FAJARILLO</h2>
 		<img src="profile.png" width="350" height="350">
-		</div>
+	</div>
 </body>
 </html>
