--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 		</ul>
 	</div>
 	
-	<div id="content">
+	<div id="profile">
 		<h2>J LOUISSE FAJARILLO</h2>
 		<img src="profile.png" width="350" height="350">
+	</div>
+
+	<div id="aboutme">
+		<h2>ABOUT ME</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi repudiandae, animi, porro illum fugiat quisquam perferendis asperiores reprehenderit reiciendis quaerat deleniti recusandae cumque possimus ullam qui quia! Dolorum, recusandae ex.</p>
 	</div>
 </body>
 </html>
