--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
 	<div id="aboutme">
 		<h2>ABOUT ME</h2>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi repudiandae, animi, porro illum fugiat quisquam perferendis asperiores reprehenderit reiciendis quaerat deleniti recusandae cumque possimus ullam qui quia! Dolorum, recusandae ex.</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi repudiandae, animi, porro illum fugiat quisquam perferendis asperiores reprehenderit reiciendis quaerat deleniti recusandae cumque possimus ullam qui quia! Dolorum, recusandae ex.</p>
 	</div>
+
+	<div id="educationskills">
+		<h2>EDUCATION</h2>
+		<h2>SKILLS</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi repudiandae, animi, porro illum fugiat quisquam perferendis asperiores reprehenderit reiciendis quaerat deleniti recusandae cumque possimus ullam qui quia! Dolorum, recusandae ex.</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi repudiandae, animi, porro illum fugiat quisquam perferendis asperiores reprehenderit reiciendis quaerat deleniti recusandae cumque possimus ullam qui quia! Dolorum, recusandae ex.</p>
+	</div>
+
+	<div id="educationskills">
+		<h2>REACH ME AT</h2>
+		<img src="socials.png" width="300" height="300">
+	</div>
+
 </body>
 </html>
