--- a/index.html
+++ b/index.html
@@ -88,16 +88,23 @@
                 </div>
                 <div class="folder-content">
                     <div id="tab1" class="content active">
-                        <p id = "contents">List-It: A To-do List System</p>
+                        <p id = "contents">
+                            <a class = "project-links">List-It: A To-do List System</a>
+                        </p>
                         <p id = "contents">List It is a system written in Python that allows users to create new notes containing 
                             specific tasks, view their notes, edit their existing notes, add new tasks, mark tasks as done, calculate the 
                             time remaining for a task, and delete notes.</p>
                     </div>
                     <div id="tab2" class="content">
-                        <p id = "contents">Project 2: A JavaScript dynamic web app overview.</p>
+                        <p id = "contents">
+                            <a class = "project-links" href="http://localhost/Fajarillo/index.php" target="_blank">Student Portal - Website</a>
+                        </p>
+                        <p id = "contents">A student portal created using PHP, designed using CSS, and data backed up by MySQL.</p>
+                    
                     </div>
                     <div id="tab3" class="content">
-                        <p id = "contents">Library Management System</p>
+                        <p id = "contents">
+                            <a class = "project-links">Library Management System</a></p>
                         <p id = "contents">A library management system that manages books, members, and transactions that implement the use of classes to represent books, members, and transactions, with inheritance to 
                             demonstrate the concept of object-oriented programming.</p>
                     
