--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
                     <div class="tab active" onclick="openFolderTab(event, 'tab1')">1</div>
                     <div class="tab" onclick="openFolderTab(event, 'tab2')">2</div>
                     <div class="tab" onclick="openFolderTab(event, 'tab3')">3</div>
+                    <div class="tab" onclick="openFolderTab(event, 'tab4')">4</div>
                 </div>
                 <div class="folder-content">
                     <div id="tab1" class="content active">
                         <p id = "contents">
-                            <a class = "project-links">List-It: A To-do List System</a>
+                            <a class = "project-links" href = "https://github.com/luifajarillo/List-It">List-It: A To-do List System</a>
                         </p>
                         <p id = "contents">List It is a system written in Python that allows users to create new notes containing 
                             specific tasks, view their notes, edit their existing notes, add new tasks, mark tasks as done, calculate the 
@@ -100,14 +101,17 @@
                             <a class = "project-links" href="http://localhost/Fajarillo/index.php" target="_blank">Student Portal - Website</a>
                         </p>
                         <p id = "contents">A student portal created using PHP, designed using CSS, and data backed up by MySQL.</p>
-                    
                     </div>
                     <div id="tab3" class="content">
                         <p id = "contents">
-                            <a class = "project-links">Library Management System</a></p>
+                            <a class = "project-links" href = "https://github.com/luifajarillo/LMS">Library Management System</a></p>
                         <p id = "contents">A library management system that manages books, members, and transactions that implement the use of classes to represent books, members, and transactions, with inheritance to 
                             demonstrate the concept of object-oriented programming.</p>
-                    
+                    </div>
+                    <div id="tab4" class="content">
+                        <p id = "contents">
+                            <a class = "project-links" href = "https://github.com/luifajarillo/Student-Portal---GUI">Student Portal - GUI</a></p>
+                        <p id = "contents">A student portal created using the Python language. Graphic User Interface implemented using the Tkinter module.</p>
                     </div>
                 </div>
             </div>
